src/tests/code/pass/pass_operator_combined_assignment_addition.u
entrypoint:~()
{
	iErrorCode:~i64{-15};
	iErrorCode += 30;
}
->(iErrorCode)