src/tests/code/fail/fail_assignment_expression.u
entrypoint:~()
{
	iErrorCode:~i64{1};

	foo:~i1{0};
	
	if(foo :=  1)
	{
		iErrorCode += 4;
	}
}
->(iErrorCode)